--- a/views/index.pug
+++ b/views/index.pug
@@ -1,18 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to my sailaja life. I don't like disturb people who are not intersted to talk with me.They should clearn enough before making friends. if  not dont go bilndly 
- 
- 
-  button(type="button", class="btn btn-primary"  onclick="doReduce()") Press Me
-  div(id="reduce") Reduce the value
-  a(href='http://localhost:3000/Ball') Link
-  script.
-    let count=20;
-    let change =-1;
-    function doReduce(){
-      count=count+change;
-      change=change-1;
-      document.getElementById('reduce').innerHTML=`Count ${count} with Change ${change}`
-    }
+  if (!user)
+    a(href="/login") Login
+    br
+    a(href="/register") Register
+  if (user)
+    p You are currently logged in as #{user.username}
+    a(href="/Ball") Take me to Ball
+    br
+    a(href="/logout") Logout
